feat: fix pwa support for iphone

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,13 +5,31 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skate Analytics</title>
+    
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="SkateApp">
-    <link rel="apple-touch-icon" href="/apple-touch-icon">
+    
+    <link rel="apple-touch-icon" href="/pwa-192x192.png">
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-  </body>
+
+    <script>
+      if (("standalone" in window.navigator) && window.navigator.standalone) {
+        var curnode, location=document.location, stop=/^(a|html)$/i;
+        document.addEventListener('click', function(e) {
+          curnode=e.target;
+          while (!(stop).test(curnode.nodeName)) {
+            curnode=curnode.parentNode;
+          }
+          if('href' in curnode && ( curnode.href.indexOf('http') || ~curnode.href.indexOf(location.host) ) ) {
+            e.preventDefault();
+            location.href = curnode.href;
+          }
+        },false);
+      }
+    </script>
+    </body>
 </html>
